deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wisecow
  name: deployment-wisecow
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-wisecow
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-wisecow
    spec:
      containers:
      - image: yashgangwar123/wisecow:latest
        imagePullPolicy: Always
        name: wisecow
        ports:
        - containerPort: 4499
